🐛 Fix z-index on schedule legend

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -16,7 +16,7 @@
   background-color: $offwhite;
   padding: 8px 16px;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16), 0 5px 8px 0 rgba(0, 0, 0, 0.12);
-  z-index: 50;
+  z-index: 500;
 
   &:hover {
     ul.tracks {
